--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <title>sto</title>
 
     <!-- Шрифты -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
   </head>
+
   <body>
     <noscript>
       <strong>We're sorry but sto doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
